--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1453,7 +1453,7 @@
     </li>
     <li>
       <a href="{{ site.js }}faq/change-domain-binding-of-product-key.html"
-        >How to change the domain binding of your product key?</a
+        >How to Secure Your License Key by Managing Domain Binding?</a
       >
     </li>
     <li>
@@ -1608,6 +1608,10 @@
     <li>
       <a href="{{ site.js }}faq/enable-supported-barcode-format.html"
         >How to Enable Specific Barcode Formats with Your License?</a>
+    </li>
+    <li>
+      <a href="{{ site.js }}faq/camera-cannot-open-in-pwa.html"
+        >Camera Cannot Open in PWA Using Dynamsoft Barcode Reader on iOS?</a>
     </li>
   </ul>
 </li>
