--- a/_includes/sidelist-programming/sidelist-understanding-v10.4.3100.html
+++ b/_includes/sidelist-programming/sidelist-understanding-v10.4.3100.html
@@ -2,4 +2,5 @@
 <li lang="javascript"><a href="{{ site.dcvb_introduction }}index.html" class="otherLinkColour">Overview of DCV</a></li>
 {%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-architecture.html" -%}
 {%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-performance.html" -%}
-{%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-parameters.html" -%}
+{%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-parameters-organization.html" -%}
+{%- include liquid_searchVersionTreeFile.html ver=include.ver curPath=include.curPath targetRelativePath="sidelist-parameter-reference.html" -%}
