--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1432,8 +1432,8 @@
     </li>
     <li>
       <a
-        href="{{ site.js }}faq/barcode-reader-docs-js/programming/javascript/faq/How-to-use-initSettings-getSimplifiedSettings-updateSettings.html"
-        >How to use initSettings/getSimplifiedSettings/updateSettings?</a
+        href="{{ site.js }}faq/barcode-reader-docs-js/programming/javascript/faq/differences-between-updateScanSettings-updateVideoSettings-and-updateRuntimeSettings.html"
+        >What are the differences between updateScanSettings/updateVideoSettings/updateRuntimeSettings ?</a
       >
     </li>
     <li>
