update to internal commit b986aa54

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1059,6 +1059,13 @@
                 </li>
                 <li>
                   <a
+                    href="{{ site.dcvb_js_api }}core/basic-structures/error-info.html"
+                    class="otherLinkColour"
+                    >ErrorInfo</a
+                  >
+                </li>
+                <li>
+                  <a
                     href="{{ site.dcvb_js_api }}core/intermediate-results/enhanced-grayscale-image-unit.html"
                     class="otherLinkColour"
                     >EnhancedGrayscaleImageUnit</a
