update to internal commit 4f222d5b

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1642,6 +1642,10 @@
       <a href="{{ site.js }}faq/camera-cannot-open-in-pwa.html"
         >How to Resolve Camera Cannot Open in PWA Using Dynamsoft Barcode Reader on iOS?</a>
     </li>
+    <li>
+      <a href="{{ site.js }}faq/adaptive-wasm-loading.html"
+        >What Is Adaptive WebAssembly (Wasm) Loading and How Does It Work?</a>
+    </li>
   </ul>
 </li>
 <li lang="javascript"><a href="{{ site.license_activation }}index.html" class="otherLinkColour">License Initialization</a></li>
