Update Parameters link in sidelist-parameters.html

--- a/_includes/sidelist-programming/sidelist-parameters.html
+++ b/_includes/sidelist-programming/sidelist-parameters.html
@@ -1,4 +1,4 @@
-<li lang="javascript"><a href="{{ site.dcvb_parameters }}index.html" class="otherLinkColour">Parameters</a>
+<li lang="javascript"><a href="{{ site.dcvb_parameter_file }}index.html" class="otherLinkColour">Parameters</a>
     <ul>
         <li><a href="{{ site.dcvb_parameter_file }}capture-vision-template.html" class="otherLinkColour">CaptureVisionTemplate Object</a>
             <ul>
