Update FAQ link to point to the new Dynamsoft FAQ page

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1425,8 +1425,10 @@
 </li>
 
 <li>
-  <a href="{{ site.js }}faq/" class="otherLinkColour">FAQ</a>
-  <ul>
+  <a target="_blank" 
+     href="https://www.dynamsoft.com/faq/barcode-reader/web/index.html" 
+     class="otherLinkColour">FAQ</a>
+  <!-- <ul>
     <li>
       <a href="{{ site.js }}faq/ways-to-copy-dbr-js-deployable-files.html"
         >How to get a copy of Dbr JS deployable files ?</a
@@ -1646,7 +1648,7 @@
       <a href="{{ site.js }}faq/adaptive-wasm-loading.html"
         >What Is Adaptive WebAssembly (Wasm) Loading and How Does It Work?</a>
     </li>
-  </ul>
+  </ul> -->
 </li>
 <li lang="javascript"><a href="{{ site.license_activation }}index.html" class="otherLinkColour">License Initialization</a></li>
 <!-- <li class="category">OTHERS</li>
