Update upgrade guide links and enhance migration instructions for version 11

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1396,7 +1396,7 @@
 </li>
 <li>
   <a
-    href="{{ site.js }}upgrade-guide/10to11.html"
+    href="{{ site.js }}upgrade-guide/migrate_to11.html"
     style="cursor: pointer; color: #3c3c3c"
     >Upgrade Instructions</a
   >
