Update migration guide links for upgrading from v9.x and v10.x to version 11

--- a/_includes/sidelist-programming/programming-javascript.html
+++ b/_includes/sidelist-programming/programming-javascript.html
@@ -1397,11 +1397,11 @@
 <li lang="javascript"><a class="otherLinkColour">Migration Guides</a>
   <ul>
     <li><a
-    href="{{ site.js }}upgrade-guide/migrate-from-v10.html"
+    href="{{ site.js }}migrate-from-v10/index.html"
     class="otherLinkColour">Migrate from 10.x to 11.x</a>
     </li>
     <li><a
-    href="{{ site.js }}upgrade-guide/migrate-from-v9.html"
+    href="{{ site.js }}migrate-from-v9/index.html"
     class="otherLinkColour">Migrate from 9.x to 11.x</a>
     </li>
   </ul>
